--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ h1, h2, h3 {
 header {
     background: rgba(52, 78, 65, 0.9);
     backdrop-filter: blur(5px);
-    position: sticky;
+    position: fixed;
     top: 0;
     /* z-index: 100; */
     z-index: 1000; /* Higher than other elements */
@@ -831,4 +831,5 @@ header .container {
         display: flex; /* show full menu */
     }
 }
+
 
